ChangeLog for 2.53.1

//Beta 14
Check for hangs every 1000 ZScript instructions, instead of 100,000.

//Beta 13
Added Strings Help to the Help submenu.
Changed 'ZQuest Editor Help' to 'Editor Help'.
Edited the item help info for shields to reference ZQ Shield Help
	instead of the ZC.com Wiki.
Changed 'Shield Block Flags' in the Help submenu to 'Shield Help'.
Allow zstrings.txt to be in root or in ./docs
Changed the menu entry for ZQuest>>>Help to a 'Help' submenu.
	Added ZQuest Help, Shield Block Flag Help, and ZScript Help to
	the new submenu. These require zquest.txt, shield_block_flags.txt,
	and zscript.txt, respectively. 
	( ZoriaRPG, 17th November, 2019 )

Added 'skip_layer_warning' config int, under '[zquest]'
	If non-zero, the warning message when trying to place flags
	on layers they don't work on, is not displayed. This is helpful
	for scripts which read flags off of layers.
Changed the level palette editor, so that it starts with the
	palette of the current screen selected, instead of
	level palette 0.
	( Venrob, 16th November, 2019 )
	
Fixed the error messages for Screen->LoadItem, LoadNPC, LoadLWeapom
	and load EWeapon to return a 1-indexed value.
	( ZoriaRPG, 15th November, 2019 )

//Beta 12
Because 'particle' and 'decoration' are potentially already common
	identifiers in scripts, I have reversed the reservation of these 
	tokens, changing them to 'decorationsprite' and 'particlesprite'.
	We can add user typedefs to <std> if we want, later, to shorten
	the datatype to something like 'particles' or 'deco'.
	( ZoriaRPG, 13th November, 2019 )

Reserved 'particle' and 'decoration' as datatypes.
	( ZoriaRPG, 12th November, 2019 )

//Beta 11
Updated qst.dat so that the script buffer uses '#include', not 'import'.
Classic.zh: v1.12. Use '#include', not 'import'.
	( ZoriaRPG, 9th November, 2019 )
	
Fixed instability and improper offsets from Import/Export tiles. 
	( ZoriaRPG, 8th November, 2019 )
